# MI-Concorrencia-ConectividadeP2

./: README.md
Back-End/: database.db  docker-compose.yml  pyproject.toml
Back-End/app/: main.py
Back-End/app/config/: connection.py  init_db.py  settings.py
Back-End/app/controllers/: passagem_controller.py  user_controller.py  voo_controller.py
Back-End/app/models/: passagem_model.py  user_model.py  voo_model.py
Back-End/app/routers/: router.py
Back-End/app/schemas/: passagem_schemas.py  user_schemas.py  voo_schemas.py
Back-End/app/security/: security.py
Back-End/app/testes/: serverB.py
Back-End/app/utils/: dependecies.py  models.py
Back-End/migrations/: env.py
Back-End/migrations/versions/: a54c07313a1d_alteraçao_no_user_password_3.py  b81d0ec93994_alteraçao_no_user_password.py  ff9605d88ae1_alteraçao_no_user_password_2.py
Back-end/: Makefile  main.py
Back-end/controllers/: testeController.py
Back-end/routers/: router.py
Back-end/testes/: serverC.py
BackEnd/: docker-compose.yml  pyproject.toml
BackEnd/app/: main.py
BackEnd/app/config/: settings.py
BackEnd/app/controllers/: auth_controller.py  user_controller.py  voo_controller.py
BackEnd/app/routers/: router.py
BackEnd/app/schemas/: voo_schemas.py
BrAirlines/Back-End/: docker-compose.yml  pyproject.toml
BrAirlines/Back-End/app/: __init__.py  main.py
BrAirlines/Back-End/app/config/: init_db.py
BrAirlines/Back-End/app/controllers/: passagem_controller.py  voo_controller.py
BrAirlines/FrontEnd/vendecom/: Dockerfile  docker-compose.yml  index.html
BrAirlines/FrontEnd/vendecom/src/: index.css  main.tsx
BrAirlines/FrontEnd/vendepass/: package-lock.json  vite.config.js
BrAirlines/FrontEnd/voebr/src/: App.css  index.css  output.css
BrasilPass/Back-End/: Dockerfile  docker-compose.yml  pyproject.toml
BrasilPass/Back-End/app/: main.py
BrasilPass/Back-End/app/config/: init_db.py
BrasilPass/Back-End/app/controllers/: passagem_controller.py  voo_controller.py
BrasilPass/Back-End/app/models/: passagem_model.py  voo_model.py
BrasilPass/Back-End/app/testes/: serverA.py
BrasilPass/FrontEnd/vendecom/: index.html
BrasilPass/FrontEnd/vendepass/: package.json
BrasilPass/FrontEnd/voebr/: package.json
Front-end/vendepass/: package.json
FrontEnd/vendecom/: package-lock.json  package.json
FrontEnd/vendecom/src/: App.tsx
FrontEnd/vendepass/: package-lock.json
FrontEnd/voebr/: package-lock.json  package.json
FrontEnd/voebr/src/: App.jsx
VoeBr/Back-End/: Dockerfile  docker-compose.yml  pyproject.toml
VoeBr/Back-End/app/: main.py
VoeBr/Back-End/app/config/: init_db.py
VoeBr/FrontEnd/vendecom/: package.json
VoeBr/FrontEnd/vendepass/: index.html
(+47 files in other folders)
