[tool.poetry]
name = "redesp2"
version = "0.1.0"
description = ""
authors = ["Matheus Mota <matheuzwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"

[tool.ruff]
line-lenght = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = [
"E","F","W","PL","PT","I",
]

[tool.taskipy.tasks]
run = 'uvicorn main:app --reload'
test = 'pytest --cov=app'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
